# PSI-analiza-sentymentu

./: .gitignore  DOKUMENTACJA.md  README.md  analiza_sentymentu.html  analiza_sentymentu.ipynb  analiza_sentymentu.py  analiza_sentymentu.qmd  pyproject.toml
data/: results_reddit.txt  results_wykop.txt
raport/: analiza_sentymentu.qmd
src/: README.md  main.py  reddit.py  wykop.py
src/data/: reddit_results.txt  results_wykop.txt
src/scrapers/: reddit.py  test.py  wykop.py
słowniki/: SłownikSentymentu.csv  slownik_kandydaci.csv
